package colorRule;

import color.*;

import java.util.List;

public class QuadLifeColorRule implements ColorRule {

    @Override
    public Color colorAtBirth(List<Color> neighboursColors) {
        //TODO
        return null;
    }
}
