package gameoflife.color;

public class Green extends Color {
    @Override
    public String getColor() {
        return "\u001B[32m";
    }

    @Override
    public String toString() {
        return "Green";
    }
}
