package gameoflife.view;

public interface View {
    void startMessages();
}
