package stateBehavior;

public class Alive implements StateBehavior {
    @Override
    public boolean isAlive() {
        return true;
    }
}
