@startuml
'https://plantuml.com/class-diagram

package gameoflife {

    package rule {
        interface Rule {
            survives(int livingNeighbors)
            born(int livingNeighbors)
        }

        class ClassicRule implements Rule {
            survives(int livingNeighbors)
            born(int livingNeighbors
        }

        class HighLifeRule implements Rule {
            survives(int livingNeighbors)
            born(int livingNeighbors)
        }

        class BreederRule implements Rule {
            survives(int livingNeighbors)
            born(int livingNeighbors)
        }

        class DiffusionRule implements Rule {
            survives(int livingNeighbors)
            born(int livingNeighbors)
        }

        class LifeWithoutDeathRule implements Rule {
            survives(int livingNeighbors)
            born(int livingNeighbors)
        }
    }

    package colorRule {
        interface ColorRule {
            colorAtBirth(List<Color> neighboursColors)
        }

        class NoColorRule implements ColorRule {
            colorAtBirth(List<Color> neighboursColors)
        }

        class ImmigrationColorRule implements ColorRule  {
            colorAtBirth(List<Color> neighboursColors)
        }

        class QuadLifeColorRule implements ColorRule  {
            colorAtBirth(List<Color> neighboursColors)
        }
    }

    package stateBehavior {
        abstract StateBehavior{
            abstract isAlive()
            abstract toString()
            equals()
            hashCode()
        }

        class Alive extends StateBehavior {
            isAlive()
            toString()
        }

        class Dead extends StateBehavior {
            isAlive()
            toString()
        }
    }

    package color {
        abstract Color {
            abstract getColor()
            abstract toString()
            equals()
            hashCode()
        }

        class Red extends Color {
            getColor()
            toString()
        }

        class Blue extends Color {
            getColor()
            toString()
        }

        class Green extends Color {
            getColor()
            toString()
        }

        class Yellow extends Color {
            getColor()
            toString()
        }

        class Magenta extends Color {
            getColor()
            toString()
        }

        class White extends Color {
            getColor()
            toString()
        }

        class Black extends Color {
            getColor()
            toString()
        }
    }

    package view {

        package boarddisplay {
            interface BoardDisplay {
                displayBoard()
            }

            class LivingWhiteDeadBlackDisplay implements BoardDisplay, gameoflife.observer.Observer {
                displayBoard()
                update(Board board)
            }

            class LivingBlackDeadWhiteDisplay implements BoardDisplay, gameoflife.observer.Observer{
                displayBoard()
                update(Board board)
            }

            class RandomColorDisplay implements BoardDisplay, gameoflife.observer.Observer {
                displayBoard()
                update(Board board)
            }
        }

        package statisticsdisplay {
            interface StatisticsDisplay {
                displayStatistics()
            }

            class PopulationStatisticsDisplay implements StatisticsDisplay, gameoflife.observer.Observer {
                displayStatistics()
                update(Board board)
            }

            class RulesAppliedDisplay implements StatisticsDisplay, gameoflife.observer.Observer {
                displayStatistics()
                update(Board board)
            }
        }

        interface View {
            startMessages()
        }

        class ConsoleView implements View {
            startMessages()
        }
    }

    package observer {
        interface Observer {
            update(Board board)
        }

        interface Subject {
            registerObserver(Observer o)
            removeObserver(Observer o)
            notifyObservers()
        }
    }

    package gamemode {
        interface AbstractGameFactory {
            createRule(): Rule
            createColorRule(): ColorRule
        }

        class ClassicModeFactory implements AbstractGameFactory {
            createRule(): Rule
            createColorRule(): ColorRule
        }

        class ImmigrationModeFactory implements AbstractGameFactory {
            createRule(): Rule
            createColorRule(): ColorRule
        }

        class HighLifeModeFactory implements AbstractGameFactory {
            createRule(): Rule
            createColorRule(): ColorRule
        }
    }

    package controller {
        class Controller {
            GameOfLife model
            BoardDisplay boardDisplay
            List<StatisticsDisplay> statisticsDisplays
            View view

            Controller(GameOfLife model)
            startGameLoop()
        }
        Controller::model - gameoflife.model.GameOfLife
        Controller::boardDisplay - BoardDisplay
        Controller::statisticsDisplays - StatisticsDisplay
        Controller::view - View

    }

    package model {

        class Cell {
            StateBehavior state
            Color color

            Cell(StateBehavior state, Color color)
            setState()
            setColor()
            getColor()
        }
        Cell::state -- StateBehavior
        Cell::color -- Color

        class Board {
            int rows
            int columns
            Cell[][] grid

            Board(int rows, int columns)
            getCellAt(int row, int column)
            setCellAt(int row, int column, Cell cell)
            getLivingNeighbours(int row, int column)
        }
        Board - "*" Cell

        class GameOfLife implements gameoflife.observer.Subject {
            Board board
            Rule rule
            ColorRule colorRule
            List<Observer> observers

            GameOfLife(int rows, int columns, AbstractGameFactory factory)
            computeNextGeneration()
            setLivingCell(int row, int column)
            setDeadCell(int row, int column)

            registerObserver(Observer o)
            removeObserver(Observer o)
            notifyObservers()
        }
        GameOfLife::board -- Board
        GameOfLife::rule --- Rule
        GameOfLife::colorRule --- ColorRule
        GameOfLife::GameOfLife ---> AbstractGameFactory
    }

    class App {
        GameOfLife gameOfLife
        Controller controller
        main()
    }
    App - GameOfLife
    App - Controller
}

@enduml

